--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Infoholic",
     "version_number": "0.0.1",
     "website_url": "https://github.com/otDan/PlayerMarkers",
-    "description": "See your important character stats at anytime!",
+    "description": "A ROUNDS mod that shows you the most important stats at all time! Created by Penial.",
     "dependencies": [
         "willis81808-UnboundLib-2.7.4",
         "willis81808-MMHook-1.0.0",
