--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Infoholic",
-    "version_number": "0.0.1",
+    "version_number": "0.0.2",
     "website_url": "https://github.com/PikachuPenial/Infoholic",
-    "description": "A ROUNDS mod that shows you the most important stats at all time! Created by Penial.",
+    "description": "A ROUNDS mod that shows you the most important stats at all times! Created by Penial.",
     "dependencies": [
         "willis81808-UnboundLib-2.7.4",
         "willis81808-MMHook-1.0.0",
