--- a/Infoholic.csproj
+++ b/Infoholic.csproj
@@ -6,19 +6,19 @@
 
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\..\Downloads\BepInEx_x86_5.4.11.0\BepInEx\core\0Harmony.dll</HintPath>
+      <HintPath>..\..\..\Downloads\BepInEx_x64_5.4.19.0\BepInEx\core\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\ROUNDS\Rounds_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx">
-      <HintPath>..\..\..\Downloads\BepInEx_x86_5.4.11.0\BepInEx\core\BepInEx.dll</HintPath>
+      <HintPath>..\..\..\Downloads\BepInEx_x64_5.4.19.0\BepInEx\core\BepInEx.dll</HintPath>
     </Reference>
     <Reference Include="PhotonUnityNetworking">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\ROUNDS\Rounds_Data\Managed\PhotonUnityNetworking.dll</HintPath>
     </Reference>
     <Reference Include="UnboundLib">
-      <HintPath>..\..\..\AppData\Roaming\r2modmanPlus-local\ROUNDS\profiles\Mod Creating\BepInEx\plugins\willis81808-UnboundLib\UnboundLib.dll</HintPath>
+      <HintPath>..\..\..\Downloads\willis81808-UnboundLib-3.1.4\plugins\UnboundLib.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
       <HintPath>..\..\..\TEST\TEST_Data\Managed\Unity.TextMeshPro.dll</HintPath>
